Closed
Bug 466765
Opened 15 years ago
Closed 15 years ago
"ASSERTION: Bad race happening" (nsSpeculativeScriptThread::StartParsing)
Categories
(Core :: DOM: HTML Parser, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla1.9.1b3
People
(Reporter: jruderman, Assigned: mrbkap)
References
()
Details
(Keywords: assertion, verified1.9.1)
Attachments
(2 files)
3.02 KB,
text/plain
|
Details | |
2.14 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
About 25% of the time, loading http://www.runnersworld.com/ triggers: ###!!! ASSERTION: Bad race happening: '!mCurrentlyParsing', file /Users/jruderman/central/parser/htmlparser/src/nsParser.cpp, line 411
That sounds bad
Flags: blocking1.9.1?
Updated•15 years ago
|
Assignee: nobody → mrbkap
Flags: blocking1.9.1? → blocking1.9.1+
Priority: -- → P1
Target Milestone: --- → mozilla1.9.1b3
Assignee | ||
Comment 2•15 years ago
|
||
The problem is that we were starting two speculative parsers that were then racing against each other. I'm assuming that we were near EOF when they were created, since otherwise, we probably would have crashed. With this patch, the parser will only block itself once per recursive invocation.
Attachment #351288 -
Flags: superreview?(jst)
Attachment #351288 -
Flags: review?(jst)
Assignee | ||
Updated•15 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•15 years ago
|
Attachment #351288 -
Flags: superreview?(jst)
Attachment #351288 -
Flags: superreview+
Attachment #351288 -
Flags: review?(jst)
Attachment #351288 -
Flags: review+
Assignee | ||
Comment 3•15 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/582e9452bc01
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Reporter | ||
Updated•15 years ago
|
Keywords: testcase-wanted
Assignee | ||
Comment 4•15 years ago
|
||
http://hg.mozilla.org/releases/mozilla-1.9.1/rev/b371f7c5be65
Keywords: fixed1.9.1
Comment 5•14 years ago
|
||
verified FIXED using the url provided by Jesse on debug builds: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1.1pre) Gecko/20090706 Shiretoko/3.5.1pre ID:20090706143721 and Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090706 Minefield/3.6a1pre ID:20090706143743
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
Comment hidden (spam) |
You need to log in
before you can comment on or make changes to this bug.
Description
•