Bug 466765 - Don't start the speculative parser twice. r+sr=jst